--- a/legacy/pom.xml
+++ b/legacy/pom.xml
@@ -44,6 +44,7 @@
     <jackson.version>1.5.2</jackson.version>
     <jline.version>0.9.94</jline.version>
     <easymock.versin>3.0</easymock.versin>
+    <dependency.aws-java-sdk.revision>1.11.273</dependency.aws-java-sdk.revision>
   </properties>
   <dependencies>
     <dependency>
